--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8" />
       <link rel="icon" type="image/svg+xml" href="./src/assets/icon.png" />
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+      <link rel="description" href=" A fully responsive developer portfolio built using Vite, React, and Bootstrap. Includes an overview of my skills, featured projects, and contact section. Designed to be fast, clean, and easy to navigate. This portfolio serves as my main place to present my work and experience as a web developer. ">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Portfolio</title>
